--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,13 @@ body {
   margin: auto;
   align-items: center;
   justify-content: center;
+  gap: 20px;
 }
 .single-product {
   padding: 10px;
+  height: 600px;
+  padding-top: 20px;
+  background-color:antiquewhite;
   transition: 0.6s;
 }
 .single-product:hover {
@@ -54,8 +58,11 @@ body {
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
-  margin-right: 30px;
+  margin-right: 10px;
+  margin-top: 100px;
   position: fixed;
+  top: 0;
+  right: 0;
 }
 .cart-main {
   padding-right: 30px;
